--- a/src/weather.css
+++ b/src/weather.css
@@ -14,7 +14,6 @@ body {
   background-color: #f8f9fa;
   opacity: 0.7;
 }
-
 .card-body {
   max-width: 80%;
   width: 35rem;
@@ -34,17 +33,19 @@ input {
 ul {
   list-style: none;
   text-transform: capitalize;
+  margin: 0;
+  padding: 0;
+}
+li {
+  margin: 0;
+  padding: 0;
+}
+.row {
+  margin: 10px 30px 10px 30px;
 }
 .location-current {
-  font-size: 25px;
-  padding: 0;
+  font-size: 24px;
 }
-
-.col-6 {
-  padding: 0;
-  margin: 0;
-}
-
 .weather-current {
   font-size: 40px;
   text-align: right;
