--- a/src/weather.css
+++ b/src/weather.css
@@ -41,7 +41,7 @@ li {
   padding: 0;
 }
 .row {
-  margin: 10px 30px 10px 30px;
+  margin: 10px 25px 5px 25px;
 }
 .location-current {
   font-size: 25px;
@@ -60,6 +60,9 @@ li {
 .weather-details {
   font-size: 15px;
   text-align: right;
+}
+.col-2 {
+  padding: 15px;
 }
 p {
   text-align: center;
