--- a/src/weather.css
+++ b/src/weather.css
@@ -4,6 +4,8 @@ body {
   background-size: cover;
   font-family: "Raleway", sans-serif;
   text-transform: capitalize;
+  text-align: center;
+  color: #434242;
 }
 .container {
   max-width: 500px;
@@ -16,6 +18,11 @@ body {
   width: 40rem;
   background-color: #f8f9fa;
   opacity: 0.7;
+  background: radial-gradient(
+    circle at 0.4% -0.6%,
+    rgb(143, 170, 210) 0%,
+    rgb(255, 177, 177) 90%
+  );
 }
 .card-body {
   max-width: 80%;
@@ -30,47 +37,25 @@ body {
   opacity: 0.8;
   color: aliceblue;
 }
-input {
-  font-style: italic;
-}
 ul {
   list-style: none;
-
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  text-align: center;
+  display: block;
 }
-li {
-  margin: 0;
-  padding: 0;
+#current-temp {
+  font-size: 40px;
 }
-h2,
-h4 {
-  text-align: center;
+#celsius-link {
+  font-size: 30px;
+}
+#fahrenheit-link {
+  font-size: 30px;
 }
 .row {
   margin: 10px 20px 5px 20px;
 }
-.location-current {
-  font-size: 25px;
-}
-.weather-current {
-  font-size: 40px;
-
-  justify-content: center;
-}
-.temperature {
-  font-size: 20px;
-}
-.weather-details {
-  font-size: 15px;
-
-  justify-content: center;
-}
-
-.col-2 {
-  padding: 15px;
-}
 p {
   text-align: center;
+  font-size: 12px;
 }
