--- a/src/weather.css
+++ b/src/weather.css
@@ -1,6 +1,6 @@
 body {
-  background-image: url("/images/Abstract-Geometric-Background-Grey.jpg");
-  background-repeat: no-repeat;
+  background-image: url("https://i.gifer.com/XFbw.gif");
+  background-repeat: repeat;
   background-size: cover;
   font-family: "Raleway", sans-serif;
   text-transform: capitalize;
@@ -17,7 +17,7 @@ body {
   max-width: 100%;
   width: 40rem;
   background-color: #f8f9fa;
-  opacity: 0.7;
+  opacity: 0.9;
   border-radius: 30px;
 }
 .card-body {
